# vulkan12dr_scenegraph

./: .gitignore  CMakeLists.txt  README.adoc  README.md
shaders/: triangle.frag  triangle.vert
src/: common.cpp  common.hpp  main.cpp  main.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  types.hpp
src/shapes/: mesh_box.cpp  mesh_box.hpp  mesh_cone.cpp  mesh_cone.hpp  mesh_plane.cpp  mesh_plane.hpp  mesh_sphere.cpp  mesh_sphere.hpp
